--- a/server/client/package.json
+++ b/server/client/package.json
@@ -5,17 +5,17 @@
   "dependencies": {
     "bootstrap": "4.0.0-alpha.6",
     "react": "^15.6.1",
-    "react-dom": "^15.6.1",
-    "react-scripts": "1.0.13",
     "react-addons-css-transition-group": "^15.6.0",
     "react-addons-transition-group": "^15.6.0",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
+    "react-scripts": "1.0.13",
     "react-select": "^1.0.0-rc.10",
     "react-widgets": "^4.0.0",
     "reactstrap": "^4.8.0",
     "redux": "^3.7.2",
+    "redux-create-action-types": "^2.1.0",
     "redux-form": "^7.0.4",
     "redux-thunk": "^2.2.0"
   },
