--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "axios": "^0.16.2",
     "body-parser": "^1.17.2",
+    "date-fns": "^1.28.5",
     "dotenv": "^4.0.0",
     "express": "^4.15.4",
     "helmet": "^3.8.1",
@@ -20,7 +21,6 @@
     "nodemon": "^1.11.0",
     "npm-run-all": "^4.1.1",
     "promise": "^8.0.0",
-   
     "uid": "0.0.2",
     "winston": "^2.3.1"
   },
