--- a/server/client/package.json
+++ b/server/client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "bootstrap": "4.0.0-alpha.6",
     "date-fns": "^1.28.5",
+    "nock": "^9.0.18",
     "react": "^15.6.1",
     "react-addons-css-transition-group": "^15.6.0",
     "react-addons-transition-group": "^15.6.0",
@@ -19,6 +20,7 @@
     "redux": "^3.7.2",
     "redux-create-action-types": "^2.1.0",
     "redux-form": "^7.0.4",
+    "redux-mock-store": "^1.3.0",
     "redux-thunk": "^2.2.0"
   },
   "proxy": {
