--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.15.4",
     "helmet": "^3.8.1",
     "history": "4.6.3",
+    "lodash": "^4.17.4",
     "lodash.has": "^4.5.2",
     "lodash.isempty": "^4.4.0",
     "lodash.map": "^4.6.0",
