--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "nodemon": "^1.11.0",
     "npm-run-all": "^4.1.1",
     "promise": "^8.0.0",
+    "react-web-notification": "^0.2.4",
     "uid": "0.0.2",
     "winston": "^2.3.1"
   },
