Fetch Train Geolocation data along with Service and store in Tracker. Add basics of Geolocatino tracking

--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "lodash.mapvalues": "^4.6.0",
     "md5": "^2.2.1",
     "mockdate": "^2.0.2",
+    "node-geo-distance": "^1.2.0",
     "node-sass-chokidar": "^0.0.3",
     "nodemon": "^1.11.0",
     "npm-run-all": "^4.1.1",
     "promise": "^8.0.0",
+    "promise-sequential": "^1.1.1",
     "react-web-notification": "^0.2.4",
     "semantic-ui-react": "^0.74.2",
     "uid": "0.0.2",
